tests/lean/770.lean.expected.out
770.lean:1:25-3:40: error: invalid `do` notation, expected type is not a monad application
  Nat
You can use the `do` notation in pure code by writing `Id.run do` instead of `do`, where `Id` is the identity monad.
